--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>All Me Final</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>About Me</h1>
