--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <body>
         <h1>About Me</h1>
         <h2>Zach Bodmer</h2>
-        This website is about me and im <b>excited</b> to show you.
+        <br>
+        <code>This website is about me and im <b>excited</b> to show you.</code>
 
         <p>I am currently a student at the University Of Missouri. I am studying the feild of informational technology. I currently am the acting vice president of farmhouse fraternity.I love to watch sports and stay very active in my freee time.</p>
         <hr>
         <p>My favorite sport to watch is <a href="https://www.nfl.com" target="_blank">football</a>. I love watching the <u>Clevland browns</u> because I have alot of family in clevland. My favorite player is <i>Nick Chubb</i> </p>
         <br>
-        <img src=> #img
+        <img src=https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Baker_Mayfield_%2829349436067%29.jpg/400px-Baker_Mayfield_%2829349436067%29.jpg>
+        <br>
 
         This is my top 5 teams in the NFL
 
