--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <br>
         <code>This website is about me and im <b>excited</b> to show you.</code>
 
-        <p>I am currently a student at the University Of Missouri. I am studying the feild of informational technology. I currently am the acting vice president of farmhouse fraternity.I love to watch sports and stay very active in my freee time.</p>
-        <hr>
+        <p>I am currently a student at the University Of Missouri. I am studying the field of informational technology. I currently am the acting vice president of farmhouse fraternity.I love to watch sports and stay very active in my freee time.</p>
+        <br>
+        <p>Here is a link to my appreciation for <a href="Link.html">IT 1000</a></p>
+        <br>
         <p>My favorite sport to watch is <a href="https://www.nfl.com" target="_blank">football</a>. I love watching the <u>Clevland browns</u> because I have alot of family in clevland. My favorite player is <i>Nick Chubb</i> </p>
         <br>
         <img src=https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Baker_Mayfield_%2829349436067%29.jpg/400px-Baker_Mayfield_%2829349436067%29.jpg>
