--- a/Link.html
+++ b/Link.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <p>IT 1000 has been such a educational class. I am glad to have taken this course And increase my knowledge of the informational technology world.</p>
+        <img src="Gandalf.jpg">
   
         
     </body>
